<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>launch_pytest</name>
  <version>2.2.0</version>
  <description>A package to create tests which involve launch files and multiple processes.</description>

  <maintainer email="aditya.pande@openrobotics.org">Aditya Pande</maintainer>
  <maintainer email="brandon@openrobotics.org">Brandon Ong</maintainer>
  <maintainer email="william@openrobotics.org">William Woodall</maintainer>

  <license>Apache License 2.0</license>

  <author email="ivanpauno@ekumenlabs.com">Ivan Paunovic</author>
  <author email="michel@ekumenlabs.com">Michel Hidalgo</author>
  <author email="william@osrfoundation.org">William Woodall</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_testing</exec_depend>
  <exec_depend>osrf_pycommon</exec_depend>
  <exec_depend>python3-pytest</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
