<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>launch_testing</name>
  <version>0.7.3</version>
  <description>Helper scripts for tests that use the ROS launch tool.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>
  <author>Esteve Fernandez</author>

  <exec_depend>launch</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch</test_depend>
  <!-- <test_depend>python3-pytest</test_depend> -->
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python_cmake_module</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
