<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>launch_testing</name>
  <version>0.10.8</version>
  <description>A package to create tests which involve launch files and multiple processes.</description>
  <maintainer email="pete.baughman@apex.ai">Pete Baughman</maintainer>
  <author email="pete.baughman@apex.ai">Pete Baughman</author>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>
  <author>Esteve Fernandez</author>
  <license>Apache License 2.0</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>osrf_pycommon</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-mock</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
