<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>launch_testing_ament_cmake</name>
  <version>0.10.10</version>
  <description>A package providing cmake functions for running launch tests from the build.</description>
  <maintainer email="pete.baughman@apex.ai">Pete Baughman</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_export_depend>ament_cmake_test</buildtool_export_depend>
  <buildtool_export_depend>python_cmake_module</buildtool_export_depend>
  <buildtool_export_depend>launch_testing</buildtool_export_depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
